--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.14"
 dependencies = [
+    "celery>=5.6.0",
     "email-validator>=2.3.0",
     "flask>=3.1.2",
     "flask-login>=0.6.3",
